<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_title"
        android:defaultValue="@string/pref_location_defaultValue"
        android:inputType="text"
        android:singleLine="true"
        />


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_title"
        android:defaultValue="@string/pref_units_defaultValue"
        android:entries="@array/pref_units_label_array"
        android:entryValues="@array/pref_units_key_array"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        />


    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

</PreferenceScreen>
